auth example is ready

--- a/src/main/webapp/WEB-INF/views/AddPage.html
+++ b/src/main/webapp/WEB-INF/views/AddPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add pair</title>
-    <link rel="stylesheet" href="/res/style.css">
+    <link rel="stylesheet" href="res/style.css">
 </head>
 <body>
 <h1>Sneakers</h1>
