--- a/src/main/webapp/WEB-INF/views/LoginPage.html
+++ b/src/main/webapp/WEB-INF/views/LoginPage.html
@@ -5,15 +5,15 @@
     <title>Log In</title>
 </head>
 <body>
-<div th:if="${param.error}">
+<!--div th:if="${param.error}">
     Invalid username and password.
 </div>
 <div th:if="${param.logout}">
     You have been logged out.
-</div>
-<form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+</div-->
+<form th:action="@{/j_spring_security_check}" method="post">
+    <div><label> User Name: <input type="text" name="j_username"/> </label></div>
+    <div><label> Password: <input type="password" name="j_password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 <a href="/registration">Add new user</a>
